# generic_poker

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEMO_INSTRUCTIONS.md  DEVELOPMENT.md  README.md  app.py  build.sh  demo_disconnect_manager.py  demo_enhanced_table.html  demo_game_orchestrator.py  demo_game_state_manager.py  demo_player_session_manager.py  demo_table_creation.py  demo_websocket_manager.py  package-lock.json  pyproject.toml  render.yaml  requirements.txt  run_server.py  wsgi.py
backup/: test_pot.py
data/game_configs/: 211.json  27_double_draw.json  27_razz.json  27_single_draw.json  27_triple_draw.json  2_or_5_omaha.json  2_or_5_omaha_8.json  2_or_5_omaha_8_with_draw.json  2_or_5_omaha_with_draw.json  3_hand_hold_em.json  3_hand_hold_em_8.json  4_card_chowaha.json  4_card_chowaha_8.json  4_card_crazy_ocean_pineapple.json  4_card_crazy_ocean_pineapple_8.json  5_card_badugi.json  5_card_chowaha.json  5_card_chowaha_8.json  5_card_double_board_omaha.json  5_card_draw.json  5_card_draw_bug.json  5_card_draw_deuces_wild.json  5_card_omaha.json  5_card_omaha_8.json  5_card_shodugi.json  5_card_stampler.json  5_card_straight.json  5_card_stud.json  5_card_stud_8.json  5_card_stud_lowball.json  6_card_omaha.json  6_card_omaha_8.json  6_card_shodugi.json  6_card_stampler.json  6_card_stud.json  777.json  7_card_draw.json  7_card_flip.json  7_card_flip_8.json  7_card_stud.json  (+271 more)
data/hand_comparisons/: two_card_high_high_comparison.csv
data/hand_descriptions/: all_card_hands_description_20card_high.csv  all_card_hands_description_21_6.csv  all_card_hands_description_27_low.csv  all_card_hands_description_36card_ffh_high.csv  all_card_hands_description_a5_low.csv  all_card_hands_description_a6_low.csv  all_card_hands_description_badugi.csv  all_card_hands_description_football.csv  all_card_hands_description_hidugi.csv  all_card_hands_description_high.csv  all_card_hands_description_high_wild_bug.csv  all_card_hands_description_ne_seven_card_high.csv  all_card_hands_description_one_card_low_club.csv  all_card_hands_description_one_card_low_diamond.csv  all_card_hands_description_one_card_low_heart.csv  all_card_hands_description_one_card_low_spade.csv  all_card_hands_description_soko_high.csv  all_card_hands_description_three_card_high_club.csv  all_card_hands_description_three_card_high_diamond.csv  all_card_hands_description_three_card_high_heart.csv  all_card_hands_description_three_card_high_spade.csv  all_card_hands_description_two_card_high.csv
data/hand_evaluations/: 20card_high.json  21.json  21_6.json  27_ja_ffh_high.json  27_ja_ffh_high_wild_bug.json  27_low.json  27_low_wild.json  36card_ffh_high.json  49.json  58.json  6.json  a5_low.json  a5_low_high.json  a5_low_wild.json  a6_low.json  badugi.json  badugi_ah.json  football.json  four_card_27_ja_ffh_high.json  four_card_27_ja_ffh_high_wild_bug.json  four_card_27_low.json  four_card_a5_low.json  four_card_a5_low_high.json  four_card_high.json  four_card_high_al.json  four_card_high_wild_bug.json  hidugi.json  high.json  high_wild_bug.json  low_pip_6_cards.json  ne_seven_card_high.json  one_card_high.json  one_card_high_ah.json  one_card_high_ah_wild_bug.json  one_card_high_club.json  one_card_high_diamond.json  one_card_high_heart.json  one_card_high_spade.json  one_card_low.json  one_card_low_al.json  (+30 more)
data/hand_rankings/: all_card_hands_ranked_21.csv  all_card_hands_ranked_21_6.csv  all_card_hands_ranked_49.csv  all_card_hands_ranked_58.csv  all_card_hands_ranked_6.csv  all_card_hands_ranked_football.csv  all_card_hands_ranked_four_card_27_ja_ffh_high.csv  all_card_hands_ranked_four_card_27_ja_ffh_high_al.csv  all_card_hands_ranked_four_card_27_ja_ffh_high_al_rh.csv  all_card_hands_ranked_four_card_27_ja_ffh_high_wild_bug.csv  all_card_hands_ranked_four_card_27_ja_ffh_low.csv  all_card_hands_ranked_four_card_27_ja_ffh_low_ah.csv  all_card_hands_ranked_low_pip_6_cards.csv  all_card_hands_ranked_one_card_high.csv  all_card_hands_ranked_one_card_high_ah.csv  all_card_hands_ranked_one_card_high_ah_wild_bug.csv  all_card_hands_ranked_one_card_high_club.csv  all_card_hands_ranked_one_card_high_diamond.csv  all_card_hands_ranked_one_card_high_heart.csv  all_card_hands_ranked_one_card_high_spade.csv  all_card_hands_ranked_one_card_low.csv  all_card_hands_ranked_one_card_low_al.csv  all_card_hands_ranked_one_card_low_club.csv  all_card_hands_ranked_one_card_low_diamond.csv  all_card_hands_ranked_one_card_low_heart.csv  all_card_hands_ranked_one_card_low_spade.csv  all_card_hands_ranked_seven_card_football.csv  all_card_hands_ranked_six_card_football.csv  all_card_hands_ranked_three_card_27_ja_ffh_high.csv  all_card_hands_ranked_three_card_27_ja_ffh_low.csv  (+28 more)
docs/: BACKLOG.md  GAME_VALIDATION.md  ICHABOD801_ANALYSIS.md  MONTE_CARLO_BOT_DESIGN.md  PAGAT_CROSS_REFERENCE.md  STATUS.md  UX_TEST_FINDINGS.md
examples/: pineapple.py  straight_poker.py
templates/: lobby.html  table.html
tests/: test_chat_system.py  test_database_setup.py  test_helpers.py
tools/: bot_arena.py  compare_two_card_high_high.py  generate_game_cards.py  generate_poker_test.py  init_db.py  make_admin.py  manage_user.py  reset_db.py  seed_db.py
(+349 files in other folders)
