[project]
name = "generic_poker"
version = "0.1.0"
description = "A generic poker game engine supporting multiple variants"
authors = []
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=2.3.0",
    "flask-socketio>=5.3.0",
    "flask-login>=0.6.0",
    "sqlalchemy>=2.0.0",
    "flask-sqlalchemy>=3.0.0",
    "flask-migrate>=4.0.0",
    "bcrypt>=4.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
testpaths = [
    "tests",
    "src/generic_poker/tests"
]
addopts = "-v --cov=generic_poker"

[tool.hatch.build.targets.wheel]
packages = ["src/generic_poker"]

[tool.setuptools]
packages = ["generic_poker"]
package-dir = {"" = "src"}
